[metadata]
name = pylaundry
version = attr: pylaundry.__version__
author = Elahd Bar-Shai
author_email = pylaundry@elahd.com
description = Python library for viewing laundry room and account status for facilities using ESD payment equipment.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/elahd/pylaundry
project_urls =
    Bug Tracker = https://github.com/elahd/pylaundry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp == 3.8.1
    cryptography == 3.3.1
